# ytdl2rss

./: .gitlab-ci.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  generate_golden.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: prerelease.yml  release.yml  tox.yml
.vulture/whitelists/: ytdl2rss_whitelist.py
contrib/: ytdl-playlist-meta.sh  ytdl-thumbnails.sh
docs/: cli.rst  conf.py  index.rst
src/: ytdl2rss.py
src/ytdl2rss/: __init__.py  __main__.py
tests/: __init__.py  test_argcomplete.py  test_cli.py  test_get_entry_media_type.py  test_golden.py  test_ymd_to_rfc2822.py
tests/fixtures/: README.rst
tests/fixtures/byutv/: dwight-in-shining-armor-another-slice-of-pilot-8d25e27f-2b09-4aff-91bb-8bc22480284d.info.json  dwight-in-shining-armor-another-slice-of-pilot-8d25e27f-2b09-4aff-91bb-8bc22480284d.rss
tests/fixtures/channel9/: Using Azure Container Registry for building and deploying .NET Core Apps-cc921c07-c72e-45e7-ab0c-ac4f012f9fe3.info.json  Using Azure Container Registry for building and deploying .NET Core Apps-cc921c07-c72e-45e7-ab0c-ac4f012f9fe3.rss
tests/fixtures/dailymotion/: $6.2B VC fund manager talks trends and what companies & stocks will be the next big winners. Full Episode-x7wqaw4.info.json  $6.2B VC fund manager talks trends and what companies & stocks will be the next big winners. Full Episode-x7wqaw4.rss  'SNL' takes on Vice Presidential debate-x7wrqtb.info.json  'SNL' takes on Vice Presidential debate-x7wrqtb.rss  A to Z with the Cast of 'Emily in Paris'-x7wnb9r.info.json  A to Z with the Cast of 'Emily in Paris'-x7wnb9r.rss  Artist creates ceramics with lifelike lips and teeth-x7wprdu.info.json  Artist creates ceramics with lifelike lips and teeth-x7wprdu.rss  Can You Get The 'Antibody Cocktail' The President Got For COVID-x7wpvlt.info.json  Can You Get The 'Antibody Cocktail' The President Got For COVID-x7wpvlt.rss  For Generation Z, pandemic has had a devastating impact-x7wrqte.info.json  For Generation Z, pandemic has had a devastating impact-x7wrqte.rss  NBA-LeBron earns 'respect' and fourth Finals MVP award-x7wrxz9.info.json  NBA-LeBron earns 'respect' and fourth Finals MVP award-x7wrxz9.rss  Prime Picks - NFL Week 5-x7wpvxf.info.json  Prime Picks - NFL Week 5-x7wpvxf.rss  The Life and Views of Judge Amy Coney Barrett-x7wrzfc.info.json  The Life and Views of Judge Amy Coney Barrett-x7wrzfc.rss  The Watts Family Murders - 5 Facts To Know-x7wo0l1.info.json  The Watts Family Murders - 5 Facts To Know-x7wo0l1.rss  This Halloween ‘Fly Costume’ Flies Off The Shelves After VP Debate-x7ws1dp.info.json  This Halloween ‘Fly Costume’ Flies Off The Shelves After VP Debate-x7ws1dp.rss  WH Economic Adviser Touts Latest Coronavirus Relief Amid Skepticism-x7wrlyu.info.json  WH Economic Adviser Touts Latest Coronavirus Relief Amid Skepticism-x7wrlyu.rss
tests/fixtures/democracynow/: &#8220;I Feel for Them&#8221; - Son of Former White House Butler Says Trump Endangered Health of Residence Staff-2020-1012.info.json  &#8220;I Feel for Them&#8221; - Son of Former White House Butler Says Trump Endangered Health of Residence Staff-2020-1012.rss
tests/fixtures/gfycat/: Check out my video! League of Legends _ Captured by Overwolf-ampleartisticatlanticbluetang.info.json  Check out my video! League of Legends _ Captured by Overwolf-ampleartisticatlanticbluetang.rss
tests/fixtures/imgur/: Imgur-DDFbi8t.rss  (+1 more)
(+28 files in other folders)
