# Setuputils package metadata file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = ytdl2rss
# Human "friendly" project name for sphinx and other non-setup uses
friendly_name = ytdl2rss
version = attr: ytdl2rss.__version__
description = Create podcast RSS from youtube-dl info JSON.
long_description = file: README.rst
# Note: license is only needed for deviations/exceptions to License classifier
# https://packaging.python.org/guides/distributing-packages-using-setuptools/?highlight=keywords#license
# Is also printed by `./setup.py --license`.  Match classifier where possible.
license = CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
license_file = LICENSE.txt
author = Kevin Locke
author_email = kevin@kevinlocke.name
# Copyright statement for sphinx and other non-setup uses
copyright = Copyright 2019-2020 Kevin Locke <kevin@kevinlocke.name>
url = https://github.com/kevinoid/ytdl2rss
# Project URLs for specific purposes
# https://packaging.python.org/guides/distributing-packages-using-setuptools/?highlight=keywords#project-urls
project_urls =
    Source = https://github.com/kevinoid/ytdl2rss
    Tracker = https://github.com/kevinoid/ytdl2rss/issues
# From PyPI classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Video
# (Optional) Additional keywords used to assist searching.
keywords = podcast rss youtube youtube-dl

[options]
zip_safe = True
package_dir =
    = src
# Use packages for directories, py_modules for single-file modules
# See https://packaging.python.org/guides/distributing-packages-using-setuptools/#packages
py_modules = ytdl2rss
# packages = find:
# Generate a CLI script for a named entry point
console_scripts =
    ytdl2rss = ytdl2rss:main
# Note: install_requires and tests_require from requirements/*.in by setup.py

[options.packages.find]
exclude =
    tests
where = src

[bdist_wheel]
universal = true

[aliases]
test = pytest

[coverage:run]
branch = True
omit =
    docs/*
    setup.py
    tests/*
    .vulture/*

[flake8]
exclude =
    *.egg,
    .eggs,
    .git,
    .tox,
    .venv,
    .vulture,
    __pycache__,
    dist,
ignore =
    # Unknown interpreted text role
    # Enable after https://github.com/peterjc/flake8-rst-docstrings/issues/7 fix
    RST304,
    # Line break before binary operator
    W503,
max-line-length = 80
per-file-ignores =
    test_*.py:D101,D102,D103,D105,D107

[pycodestyle]
max_line_length = 80

[pydocstyle]
# Configuration when using the pydocstyle tool.
# Several errors are ignored by default pep257 convention:
# https://github.com/PyCQA/pydocstyle/blob/3.0.0/src/pydocstyle/violations.py#L242-L244
add_select = D
add_ignore = D203,D212

# vim: set ft=dosini :
